# depreVisuales

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
data/: red-flags.txt
dependencies/libprojectM-4.1.1/: BUILDING.md  CMakeLists.txt
dependencies/libprojectM-4.1.1/cmake/: GenerateExportHeader.cmake
dependencies/libprojectM-4.1.1/presets/: CMakeLists.txt
dependencies/libprojectM-4.1.1/src/libprojectM/: CMakeLists.txt
dependencies/libprojectM-4.1.1/src/libprojectM/Audio/: CMakeLists.txt
dependencies/libprojectM-4.1.1/src/libprojectM/MilkdropPreset/: CMakeLists.txt
dependencies/libprojectM-4.1.1/src/libprojectM/Renderer/: CMakeLists.txt
dependencies/libprojectM-4.1.1/tests/libprojectM/: CMakeLists.txt
dependencies/libprojectM-4.1.1/tests/playlist/: CMakeLists.txt
include/: audio_manager.h  graphics_manager.h  keyboard.h  projectm_manager.h  settings_window.h  utils.h
src/: audio_manager.cpp  graphics_manager.cpp  keyboard.cpp  listAudioDevices.cpp  main.cpp  projectm_manager.cpp  settings_window.cpp  utils.cpp
